--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       { "src": "app.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/app.py" }
+        { "src": "/static/(.*)", "dest": "/static/$1" },
+        { "src": "/(.*)", "dest": "/app.py" }
     ]
   }
