--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
+bcrypt==4.1.2
+blinker==1.6.3
+click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.1.1
 Flask==2.2.2
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+SQLAlchemy==2.0.29
+typing_extensions==4.10.0
 Werkzeug==2.2.2
+WTForms==3.1.2
+
