--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
-Flask==2.2.2
+Flask
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
